--- a/rnn-scratch.ipynb
+++ b/rnn-scratch.ipynb
@@ -66,20 +66,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rnn_cell_backward(da_next, cache):\n",
-    "    (a_next, a_prev, xt, parameters) = cache\n",
-    "    Wax = parameters[\"Wax\"]\n",
-    "    Waa = parameters[\"Waa\"]\n",
-    "    Wya = parameters[\"Wya\"]\n",
-    "    ba = parameters[\"ba\"]\n",
-    "    by = parameters[\"by\"]\n",
-    "    \n",
-    "    "
+    "def rnn_cell_backward(dy, gradients, parameters, x, a, a_prev):\n",
+    "    gradients[\"dWya\"] += np.dot(dy, a.T)\n",
+    "    gradients[\"dby\"] += dy\n",
+    "    da = np.dot(parameters[\"Wya\"].T, dy) + gradients[\"da_next\"]\n",
+    "    dz = (1 - a ** 2) * da\n",
+    "    gradients[\"db\"] += dz\n",
+    "    gradients[\"dWax\"] += np.dot(dz, x.T)\n",
+    "    gradients[\"dWaa\"] += np.dot(dz, a_prev.T)\n",
+    "    gradients[\"da_next\"] += np.dot(parameters[\"Waa\"].T, dz)\n",
+    "    return gradients"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rnn_backward(X, Y, parameters, cache):\n",
+    "    gradients = {}\n",
+    "    (y_hat, a, x) = cache\n",
+    "    Waa = parameters[\"Waa\"]\n",
+    "    Wax = parameters[\"Wax\"]\n",
+    "    Wya = parameters[\"Wya\"]\n",
+    "    by = parameters[\"by\"]\n",
+    "    ba = parameters[\"ba\"]\n",
+    "    \n",
+    "    gradients[\"dWax\"], gradients[\"dWaa\"], gradients[\"dWya\"] = np.zeros_like(Wax), np.zeros_like(Waa), np.zeros_like(Wya)\n",
+    "    gradients[\"dby\"], gradients[\"dba\"] = np.zeros_like[\"by\"], np.zeros_like[\"ba\"]\n",
+    "    gradients[\"da_next\"] = np.zeros_like(a[0])\n",
+    "    \n",
+    "    for t in reversed(range(len(X))):\n",
+    "        dy = np.copy(y_hat[t])\n",
+    "        dy[Y[t]] -= 1\n",
+    "        gradients = rnn_cell_backward(dy, gradients, parameters, x[t], a[t], a[t-1])\n",
+    "    return gradients, a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
